newtype-tools/tests/trybuild/ops/div_assign.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/div_assign.rs:5:26
  |
5 |     #[newtype(div_assign())]
  |                          ^

error: expected `,`
  --> tests/trybuild/ops/div_assign.rs:11:29
   |
11 |     #[newtype(div_assign(u64))]
   |                             ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/div_assign.rs:17:30
   |
17 |     #[newtype(div_assign(u64,))]
   |                              ^

error: expected `=`
  --> tests/trybuild/ops/div_assign.rs:23:35
   |
23 |     #[newtype(div_assign(u64, with))]
   |                                   ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/div_assign.rs:29:37
   |
29 |     #[newtype(div_assign(u64, with =))]
   |                                     ^
